--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -3,6 +3,7 @@
 
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:paddingBottom="70dp"
     tools:context="com.draw.aidansliney.draw3.MainActivity$PlaceholderFragment">
 
@@ -147,6 +148,8 @@
                         android:textColor="#c0b9b9" />
                 </LinearLayout>
             </android.support.v7.widget.CardView>
+
+
 
         </LinearLayout>
         // vertical
@@ -325,6 +328,9 @@
             android:layout_height="1dp"
             android:background="#bababa"
             android:layout_marginBottom="20dp" />
+
+
+
     </LinearLayout>
 
 
